--- a/owncloudApp/src/main/res/values-bg-rBG/strings.xml
+++ b/owncloudApp/src/main/res/values-bg-rBG/strings.xml
@@ -480,6 +480,8 @@
   <string name="share_privilege_can_edit_delete">изтриване</string>
   <string name="edit_share_unshare">Спри споделянето</string>
   <string name="edit_share_done">готово</string>
+  <string name="action_upload_retry">Опитай Отново</string>
+  <string name="action_upload_clear">Изчисти</string>
   <string name="manage_space_title">Управление на пространството</string>
   <string name="manage_space_description">Настройки, като сертификатите на сървъра и базата данни от данните на %1$s ще бъдат безвъзвратно изтрити.
 \n\nИзтеглените файлове ще бъдат запазени непроменени.
