--- a/owncloudApp/src/main/res/values-ca/strings.xml
+++ b/owncloudApp/src/main/res/values-ca/strings.xml
@@ -480,6 +480,8 @@
   <string name="share_privilege_can_edit_delete">elimina</string>
   <string name="edit_share_unshare">Deixar de compartir</string>
   <string name="edit_share_done">Fet</string>
+  <string name="action_upload_retry">Torna-ho a intentar</string>
+  <string name="action_upload_clear">Neteja</string>
   <string name="manage_space_title">Gestió d\'espai</string>
   <string name="manage_space_description">La configuració, base de dades i certificats del servidor %1$s s\'esborraran de forma permanent.\n\nEls arxius descarregats quedaran intactes.\n\nAquest procés tardarà una mica.</string>
   <string name="manage_space_clear_data">Neteja dades</string>
