--- a/owncloudApp/src/main/res/values-de-rCH/strings.xml
+++ b/owncloudApp/src/main/res/values-de-rCH/strings.xml
@@ -482,6 +482,8 @@
   <string name="share_privilege_can_edit_delete">löschen</string>
   <string name="edit_share_unshare">Freigabe löschen</string>
   <string name="edit_share_done">Erledigt</string>
+  <string name="action_upload_retry">Wiederholen</string>
+  <string name="action_upload_clear">Leeren</string>
   <string name="manage_space_title">verwalte Speicherplatz</string>
   <string name="manage_space_description">Einstellungen, Datenbank und Server-Zertifikate von %1$s\'s Daten werden dauerhaft gelöscht.\n\nHerunter geladene Dateien bleiben unangetastet.\n\nDieser Vorgang kann eine Zeit dauern.</string>
   <string name="manage_space_clear_data">Daten löschen</string>
