--- a/owncloudApp/src/main/res/values-en-rGB/strings.xml
+++ b/owncloudApp/src/main/res/values-en-rGB/strings.xml
@@ -483,6 +483,8 @@
   <string name="share_privilege_can_edit_delete">delete</string>
   <string name="edit_share_unshare">Stop sharing</string>
   <string name="edit_share_done">done</string>
+  <string name="action_upload_retry">Retry</string>
+  <string name="action_upload_clear">Clear</string>
   <string name="manage_space_title">Manage space</string>
   <string name="manage_space_description">Settings, database and server certificates from %1$s\'s data will be deleted permanently. \n\nDownloaded files will be kept untouched.\n\nThis process can take some time.</string>
   <string name="manage_space_clear_data">Clear data</string>
