--- a/owncloudApp/src/main/res/values-es-rAR/strings.xml
+++ b/owncloudApp/src/main/res/values-es-rAR/strings.xml
@@ -484,6 +484,8 @@ Abajo, encontrás la lista con los enlaces a los archivos locales y remotos en %
   <string name="share_privilege_can_edit_delete">borrar</string>
   <string name="edit_share_unshare">Detener compartir</string>
   <string name="edit_share_done">hecho</string>
+  <string name="action_upload_retry">Reintentar</string>
+  <string name="action_upload_clear">Borrar</string>
   <string name="manage_space_title">Administrar espacio</string>
   <string name="manage_space_description">Los ajustes, certificados de base de datos y servidor de %1$s serán elminados permanentemente. \n\nLos Archivos descargados no serán tocados.\n\nEste proceso puede tardar en completarse.</string>
   <string name="manage_space_clear_data">Limpiar datos</string>
