--- a/owncloudApp/src/main/res/values-et-rEE/strings.xml
+++ b/owncloudApp/src/main/res/values-et-rEE/strings.xml
@@ -393,6 +393,8 @@ Allpool on loend kohalikest failidest ning serveris asuvatest failidest %5$s, mi
   <string name="share_privilege_can_edit_delete">kustuta</string>
   <string name="edit_share_unshare">Lõpeta jagamine</string>
   <string name="edit_share_done">valmis</string>
+  <string name="action_upload_retry">Proovi uuesti</string>
+  <string name="action_upload_clear">Tühjenda</string>
   <string name="manage_space_title">Ruumi haldamine</string>
   <string name="manage_space_clear_data">Tühjenda andmed</string>
   <string name="manage_space_error">Mõningate failide kustutamine ebaõnnestus.</string>
