--- a/owncloudApp/src/main/res/values-fi-rFI/strings.xml
+++ b/owncloudApp/src/main/res/values-fi-rFI/strings.xml
@@ -419,6 +419,8 @@
   <string name="share_privilege_can_edit_delete">poista</string>
   <string name="edit_share_unshare">Lopeta jakaminen</string>
   <string name="edit_share_done">valmis</string>
+  <string name="action_upload_retry">Yritä uudelleen</string>
+  <string name="action_upload_clear">Tyhjennä</string>
   <string name="manage_space_title">Hallitse tilaa</string>
   <string name="manage_space_clear_data">Tyhjennä tiedot</string>
   <string name="manage_space_error">Joitain tiedostoja ei voitu poistaa.</string>
