--- a/owncloudApp/src/main/res/values-gl/strings.xml
+++ b/owncloudApp/src/main/res/values-gl/strings.xml
@@ -484,6 +484,8 @@ Descárgueo de aquí: %2$s</string>
   <string name="share_privilege_can_edit_delete">eliminar</string>
   <string name="edit_share_unshare">Deter a compartición</string>
   <string name="edit_share_done">feito</string>
+  <string name="action_upload_retry">Tentar de novo</string>
+  <string name="action_upload_clear">Limpar</string>
   <string name="manage_space_title">Administrar o espazo</string>
   <string name="manage_space_description">Van ser eliminados de xeito permanente os axustes , base de datos e certificados do servidor de %1$s.\n\nOs ficheiros descargados manteranse sen cambios.\n\nEste proceso pode levar bastante tempo.</string>
   <string name="manage_space_clear_data">Limpar os datos</string>
