--- a/owncloudApp/src/main/res/values-nb-rNO/strings.xml
+++ b/owncloudApp/src/main/res/values-nb-rNO/strings.xml
@@ -471,6 +471,8 @@
   <string name="share_privilege_can_edit_delete">slett</string>
   <string name="edit_share_unshare">Avslutt deling</string>
   <string name="edit_share_done">ferdig</string>
+  <string name="action_upload_retry">Prøv igjen</string>
+  <string name="action_upload_clear">Tøm</string>
   <string name="manage_space_title">Håndter plass</string>
   <string name="manage_space_description">Innstillinger, database og server-sertifikater fra %1$s sine data vil bli slettet permanent. \n\nNedlastede filer beholdes urørt.\n\nDenne prosessen kan ta litt tid.</string>
   <string name="manage_space_clear_data">Nullstill data</string>
