--- a/owncloudApp/src/main/res/values-pl/strings.xml
+++ b/owncloudApp/src/main/res/values-pl/strings.xml
@@ -476,6 +476,8 @@
   <string name="share_privilege_can_edit_delete">usuń</string>
   <string name="edit_share_unshare">Cofnij udostępnianie</string>
   <string name="edit_share_done">zakończono</string>
+  <string name="action_upload_retry">Powtórz</string>
+  <string name="action_upload_clear">Wyczyść</string>
   <string name="manage_space_title">Zarządzaj przestrzenią</string>
   <string name="manage_space_description">Ustawienia, baza danych i certyfikaty serwera %1$s zostaną trwale skasowane.\n\nPobrane pliki pozostaną na swoich miejscach.\n\nTen proces zajmie trochę czasu.</string>
   <string name="manage_space_clear_data">Wyczyść dane</string>
