--- a/owncloudApp/src/main/res/values-pt-rBR/strings.xml
+++ b/owncloudApp/src/main/res/values-pt-rBR/strings.xml
@@ -483,6 +483,8 @@
   <string name="share_privilege_can_edit_delete">excluir</string>
   <string name="edit_share_unshare">Parar compartilhamento</string>
   <string name="edit_share_done">finalizado</string>
+  <string name="action_upload_retry">Repetir</string>
+  <string name="action_upload_clear">Limpar</string>
   <string name="manage_space_title">Gerenciar o espaço</string>
   <string name="manage_space_description">Definições, certificados de banco de dados e servidor de dados %1$s serão excluído permanentemente. \n\nArquivos baixados serão mantidos inalterados. \n\nEste processo pode demorar algum tempo.</string>
   <string name="manage_space_clear_data">Limpar dados</string>
