--- a/owncloudApp/src/main/res/values-sq/strings.xml
+++ b/owncloudApp/src/main/res/values-sq/strings.xml
@@ -481,6 +481,8 @@
   <string name="share_privilege_can_edit_delete">fshi</string>
   <string name="edit_share_unshare">Resht së ndari</string>
   <string name="edit_share_done">u bë</string>
+  <string name="action_upload_retry">Riprovo</string>
+  <string name="action_upload_clear">Spastroje</string>
   <string name="manage_space_title">Administroni hapësirë</string>
   <string name="manage_space_description">Rregullimet, baza e të dhënave dhe dëshmitë e shërbyesit prej të dhënave nga %1$s do të fshihen përgjithmonë. \n\nKartelat e shkarkuara do të ruhen të paprekura.\n\nKy proces mund të hajë ca kohë.</string>
   <string name="manage_space_clear_data">Spastroji të dhënat</string>
