--- a/owncloudApp/src/main/res/values-sv/strings.xml
+++ b/owncloudApp/src/main/res/values-sv/strings.xml
@@ -406,6 +406,8 @@
   <string name="share_privilege_can_edit_delete">radera</string>
   <string name="edit_share_unshare">Sluta dela</string>
   <string name="edit_share_done">färdig</string>
+  <string name="action_upload_retry">Försök igen</string>
+  <string name="action_upload_clear">Rensa</string>
   <string name="manage_space_title">Hantera utrymme</string>
   <string name="manage_space_description">Inställningar, databas och servercertifikat från %1$s\'s data kommer att raderas permanent. \n\nNedladdade filer kommer inte påverkas.\n\nDetta kan ta ett tag.</string>
   <string name="manage_space_clear_data">Rensa data</string>
