--- a/owncloudApp/src/main/res/values-th-rTH/strings.xml
+++ b/owncloudApp/src/main/res/values-th-rTH/strings.xml
@@ -481,6 +481,8 @@
   <string name="share_privilege_can_edit_delete">ลบ</string>
   <string name="edit_share_unshare">ยกเลิกการแชร์</string>
   <string name="edit_share_done">สำเร็จ</string>
+  <string name="action_upload_retry">ลองใหม่อีกครั้ง</string>
+  <string name="action_upload_clear">ล้าง</string>
   <string name="manage_space_title">จัดการพื้นที่จัดการพื้นที่</string>
   <string name="manage_space_description">การตั้งค่าใบรับรองเซิร์ฟเวอร์และฐานข้อมูลจาก %1$s จะถูกลบอย่างถาวร \n\nไฟล์ที่ดาวน์โหลดจะถูกเก็บไว้อย่างดี กระบวนการนี้ต้องใช้เวลาสักครู่</string>
   <string name="manage_space_clear_data">ล้างข้อมูล</string>
