--- a/owncloudApp/src/main/res/values-uk/strings.xml
+++ b/owncloudApp/src/main/res/values-uk/strings.xml
@@ -433,6 +433,8 @@
   <string name="share_privilege_can_edit_delete">видалити</string>
   <string name="edit_share_unshare">Не ділитися</string>
   <string name="edit_share_done">зроблено</string>
+  <string name="action_upload_retry">Повторити</string>
+  <string name="action_upload_clear">Очистити</string>
   <string name="manage_space_title">Керування вільним місцем</string>
   <string name="manage_space_description">Налаштування, бази даних і сертифікати сервера з даних %1$s\'s будуть вилучені повністю. \n\nЗвантажені файли будуть збережені незайманими.\n\nЦей процес може тривати якийсь час.</string>
   <string name="manage_space_clear_data">Очистити дані</string>
