--- a/owncloudApp/src/main/res/values-zh-rCN/strings.xml
+++ b/owncloudApp/src/main/res/values-zh-rCN/strings.xml
@@ -460,6 +460,8 @@
   <string name="share_privilege_can_edit_delete">删除</string>
   <string name="edit_share_unshare">停止共享</string>
   <string name="edit_share_done">完成</string>
+  <string name="action_upload_retry">重试</string>
+  <string name="action_upload_clear">清除</string>
   <string name="manage_space_title">管理空间</string>
   <string name="manage_space_description"> %1$s 的设置，数据库以及服务器证书将会被永久删除。
 \n\n 已下载的文件将会被保留。\n\n完成此操作需要一些时间。</string>
