--- a/owncloudApp/src/main/res/values-de/strings.xml
+++ b/owncloudApp/src/main/res/values-de/strings.xml
@@ -554,4 +554,5 @@
   <string name="get_base_url_error">Es war nicht möglich, die Server-Basis-URL herauszufinden</string>
   <string name="prefs_http_logs">HTTP-Anfragen und -Antworten aufzeichnen</string>
   <string name="prefs_logs_summary">Protokolle können sensible Informationen enthalten. Die gemeinsame Nutzung von Protokollen mit anderen liegt in der alleinigen Verantwortung des Benutzers</string>
+  <string name="synchronizing_account">Konto wird synchronisiert</string>
 </resources>
