--- a/owncloudApp/src/main/res/values-pt-rBR/strings.xml
+++ b/owncloudApp/src/main/res/values-pt-rBR/strings.xml
@@ -554,4 +554,5 @@
   <string name="get_base_url_error">Não foi possível saber a url base do servidor</string>
   <string name="prefs_http_logs">Registrar solicitações e respostas HTTP</string>
   <string name="prefs_logs_summary">Os logs podem conter informações confidenciais. O compartilhamento de registros com outras pessoas é de responsabilidade exclusiva do usuário</string>
+  <string name="synchronizing_account">Sincronizando conta</string>
 </resources>
