--- a/owncloudApp/src/main/res/values-gl/strings.xml
+++ b/owncloudApp/src/main/res/values-gl/strings.xml
@@ -555,4 +555,5 @@ Descárgueo de aquí: %2$s</string>
   <string name="get_base_url_error">Non foi posíbel saber cal é o URL base do servidor</string>
   <string name="prefs_http_logs">Rexistro de solicitudes e respostas HTTP</string>
   <string name="prefs_logs_summary">Os rexistros poden conter información confidencial. Compartir rexistros con outras persoas é responsabilidade exclusiva do usuario</string>
+  <string name="synchronizing_account">Sincronizando a conta</string>
 </resources>
