--- a/owncloudApp/src/main/res/values-fa/strings.xml
+++ b/owncloudApp/src/main/res/values-fa/strings.xml
@@ -1,5 +1,10 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!--GLOBAL-->
+  <string name="global_name">نام</string>
+  <string name="global_date">تاریخ</string>
+  <string name="global_size">اندازه</string>
+  <string name="about_version">نسخه %1$s</string>
   <string name="actionbar_sync">تازه‌سازی حساب</string>
   <string name="actionbar_upload">بارگذاری</string>
   <string name="actionbar_upload_from_apps">محتوا از دیگر اپ‌ها</string>
@@ -12,10 +17,12 @@
   <string name="actionbar_descending">نزولی</string>
   <string name="actionbar_sort_title">چینش بر اساس</string>
   <string name="drawer_item_all_files">تمام پرونده‌ها</string>
+  <string name="drawer_item_shared_by_link_files">اشتراک گذاشته شده از طریق پیوند</string>
   <string name="drawer_item_settings">تنظیمات</string>
   <string name="drawer_item_uploads_list">بارگذاری‌ها</string>
   <string name="drawer_close">بستن</string>
   <string name="drawer_open">گشودن</string>
+  <string name="drawer_unavailable_free_storage">%1$s استفاده شده</string>
   <string name="drawer_feedback">بازخورد</string>
   <string name="drawer_help">راهنما</string>
   <string name="prefs_category_general">عمومی</string>
@@ -24,7 +31,9 @@
   <string name="prefs_accounts">حساب‌ها</string>
   <string name="prefs_manage_accounts">مدیریت حساب‌ها</string>
   <string name="prefs_passcode">قفل رمزعبور</string>
-  <string name="prefs_biometric">قفل اثر انگشت</string>
+  <string name="confirmation_touches_with_other_windows_title">آیا از فعال‌سازی این قابلیت مطمئن هستید ؟</string>
+  <string name="prefs_camera_picture_upload">بارگذاری تصویرها</string>
+  <string name="prefs_camera_video_upload">بارگذاری ویدیوها</string>
   <string name="prefs_log_title">فعّال کردن گزارش گیری</string>
   <string name="prefs_log_summary">برای ثبت مشکلات استفاده می‌شود</string>
   <string name="prefs_log_title_history">تاریخچهٔ گزارش گیری</string>
@@ -45,9 +54,16 @@
   <string name="pattern_not_same_pattern">الگو ها یکسان نیست</string>
   <string name="pattern_stored">الگو ذخیره شد</string>
   <string name="pattern_removed">الگو حذف شد</string>
+  <!--Bottom navigation bar-->
+  <string name="bottom_nav_files">پرونده‌ها</string>
+  <string name="bottom_nav_uploads">آپلود ها</string>
+  <string name="bottom_nav_offline">آفلاین</string>
+  <string name="bottom_nav_links">لینک‌ها</string>
   <string name="recommend_subject">‫%1$s را روی گوشی هوشمندتان بیازمایید!</string>
   <string name="recommend_text">می‌خوام ازت دعوت کنم که از %1$s رو گوشیت استفاده کنی!\nاز این‌جا بگیرش: %2$s</string>
   <string name="auth_failure_snackbar">اعتبارسنجی ناموفق</string>
+  <string name="auth_failure_snackbar_action">تغییر حساب‌کاربری</string>
+  <string name="auth_oauth_failure_snackbar_action">ورود</string>
   <string name="auth_check_server">بررسی کارساز</string>
   <string name="auth_host_url">نشانی کارساز ‪https://…</string>
   <string name="auth_username">نام کاربری</string>
@@ -80,6 +96,7 @@
   <string name="file_list_file">پرونده</string>
   <string name="file_list_files">پرونده</string>
   <string name="filedetails_select_file">برای نمایش اطّلاعات اضافی، روی پرونده‌ای ضربه بزنید.</string>
+  <string name="upload_to">آپلود به%1$s</string>
   <string name="upload_files_title">فایل ها</string>
   <string name="filedetails_size">اندازه:</string>
   <string name="filedetails_type">گونه:</string>
@@ -100,14 +117,16 @@
   <string name="common_error">خطا</string>
   <string name="common_loading">در حال بار کردن…</string>
   <string name="common_unknown">نامشخّص</string>
-  <string name="common_error_unknown">خطای نامشخّص</string>
+  <string name="common_error_unknown">خطای نامشخص</string>
   <string name="common_pending">در انتظار</string>
   <string name="common_important">مهم</string>
   <string name="about_title">درباره</string>
   <string name="change_password">تغییر گذرواژه</string>
   <string name="delete_account">برداشتن حساب</string>
   <string name="create_account">ایجاد حساب</string>
+  <string name="upload_chooser_title">آپلود از </string>
   <string name="uploader_info_dirname">نام پوشه</string>
+  <string name="uploader_upload_in_progress_ticker">در حال آپلود</string>
   <string name="uploader_upload_in_progress_content">%1$d%% در حال بارگذاری %2$s</string>
   <string name="uploader_upload_succeeded_ticker">بارگذاری موفق شد</string>
   <string name="uploader_upload_succeeded_content_single">‫%1$s بارگذاشته شد</string>
@@ -124,6 +143,8 @@
   <string name="uploads_view_group_current_uploads">جاری</string>
   <string name="uploads_view_group_failed_uploads">شکست خورده (ضربه برای تلاش دوباره)</string>
   <string name="uploads_view_group_finished_uploads">بارگذاری شده</string>
+  <string name="uploads_view_group_file_count">%d فایل‌ها</string>
+  <string name="uploads_view_group_file_count_single">%d فایل</string>
   <string name="uploads_view_upload_status_succeeded">کامل شده</string>
   <string name="uploads_view_upload_status_cancelled">لغو شده</string>
   <string name="uploads_view_upload_status_paused">مکث شده</string>
@@ -141,6 +162,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">در حال انتظار برای اتّصال وای‌فای</string>
   <string name="uploads_view_later_waiting_to_upload">درحال انتظار برای بارگذاری</string>
   <string name="uploads_view_unsupported_media_type">گونهٔ رسانهٔ پشتبانی نشده</string>
+  <string name="downloader_download_in_progress_ticker">در حال دانلود</string>
   <string name="downloader_download_in_progress_content">%1$d%% در حال بارگیری %2$s</string>
   <string name="downloader_download_succeeded_ticker">بارگیری موفق شد</string>
   <string name="downloader_download_succeeded_content">‫%1$s بارگیری شد</string>
@@ -195,6 +217,8 @@
   <string name="media_rewind_description">دکمه عقبگرد</string>
   <string name="media_play_pause_description">دکمه پخش یا توقف</string>
   <string name="media_forward_description">دکمه رو به جلو سریع</string>
+  <string name="upload_from_camera_title">تصویر از دوربین</string>
+  <string name="auth_trying_to_login">در حال ورود</string>
   <string name="auth_no_net_conn_title">هیچ ارتباطی به شبکه موجود نیست</string>
   <string name="auth_nossl_plain_ok_title">اتصال امن در دسترس نیست</string>
   <string name="auth_connection_established">اتصال برقرار شد</string>
@@ -231,7 +255,6 @@
   <string name="confirmation_remove_local">فقط محلی</string>
   <string name="confirmation_remove_account_alert">واقعاً می‌خواهید حساب %1$s را بردارید؟</string>
   <string name="confirmation_remove_public_share_title">حذف لینک</string>
-  <string name="confirmation_remove_share_message">آیا واقعا می‌خواهید %1$s حذف شود ؟</string>
   <string name="remove_success_msg">حذف با موفقیت انجام شد</string>
   <string name="remove_fail_msg">حذف نا موفق بود</string>
   <string name="rename_dialog_title">نام جدید وارد کنید</string>
@@ -248,6 +271,7 @@
   <string name="wait_checking_credentials">بررسی گواهی‌نامه‌های ذخیره شده</string>
   <string name="filedisplay_unexpected_bad_get_content">مشکل غیر متقربه، لطفا پرونده را از یک برنامه متفاوت انتخاب کنید.</string>
   <string name="filedisplay_no_file_selected">هیچ پرونده‌ای انتخاب نشده است</string>
+  <string name="activity_chooser_title">ارسال لینک به</string>
   <string name="wait_for_tmp_copy_from_private_storage">کپی کردن فایل از حافظه خصوصی</string>
   <string name="oauth_check_onoff">ورود با oAuth2   </string>
   <string name="oauth_login_connection">اتصال به کارساز OAuth2…</string>
@@ -295,13 +319,13 @@
   <string name="preview_image_description">پیش نمایش تصویر</string>
   <string name="preview_image_error_unknown_format">نمایش این عکس امکانپذیر نمی باشد</string>
   <string name="error__upload__local_file_not_copied">کپی %1$s به پوشه محلی %2$s امکان پذیر نیست</string>
-  <string name="share_link_file_error">در حین اشتراک گذاری این فایل یا پوشه خطایی رخ داده است</string>
-  <string name="unshare_link_file_error">در حین حذف اشتراک گذاری این فایل یا پوشه خطایی رخ داده است</string>
+  <string name="prefs_camera_picture_upload_path_title">مسیر بارگذاری تصویر</string>
   <string name="share_link_password_title">یک رمزعبور را وارد کنید</string>
   <string name="share_link_empty_password">شما باید یک رمزعبور را وارد کنید</string>
   <string name="activity_chooser_send_file_title">ارسال</string>
   <string name="copy_link">کپی کردن لینک</string>
   <string name="clipboard_text_copied">کپی به کلیپ بورد</string>
+  <string name="clipboard_label">کپی کردن متن از%1$s</string>
   <string name="network_error_socket_timeout_exception">زمان زیادی برای پاسخ سرور صورت گرفت.</string>
   <string name="forbidden_permissions">شما دسترسی %s را ندارید</string>
   <string name="forbidden_permissions_rename">برای تغییر نام این فایل</string>
@@ -310,13 +334,14 @@
   <string name="unshare_link_forbidden_permissions">حذف اشتراک‌گذاری این فایل</string>
   <string name="forbidden_permissions_create">برای ایجاد این فایل</string>
   <string name="uploader_upload_forbidden_permissions">برای آپلود در این پوشه</string>
+  <string name="uploader_upload_forbidden">اجازه آپلود وجود ندارد</string>
   <string name="downloader_download_file_not_found">این فایل دیگر روی سرور وجود ندارد</string>
   <string name="prefs_category_accounts">حساب‌ها</string>
   <string name="prefs_add_account">ایحاد حساب کاربری</string>
   <string name="drawer_manage_accounts">مدیریت حساب‌ها</string>
   <string name="actionbar_logger">لاگ‌ها</string>
   <string name="log_send_history_button">فرستادن تاریخچه</string>
-  <string name="log_progress_dialog_text">بارگذاری داده…</string>
+  <string name="log_progress_dialog_text">بارگذاری داده...</string>
   <string name="actionbar_select_all">انتخاب همه</string>
   <string name="actionbar_move">انتقال</string>
   <string name="file_list_empty_moving">اینجا هیچی نیست، میتوانید پوشه اضافه کنید</string>
@@ -329,6 +354,7 @@
   <string name="copy_file_invalid_overwrite">این فایل هم‌اکنون در پوشه‌‎ی مقصد وجود دارد</string>
   <string name="copy_file_error">یک خطا در زمان تلاش برای کپی این فایل یا شاخه رخ داد</string>
   <string name="forbidden_permissions_copy">کپی این فایل</string>
+  <string name="prefs_category_camera_upload">آپلودهای دوربین</string>
   <string name="shared_subject_header">به اشتراک گذاشته شد</string>
   <string name="with_you_subject_header">با تو</string>
   <string name="subject_user_shared_with_you">\"%2$s\" توسط %1$s با شما به اشتراک گذاشته شد</string>
@@ -374,7 +400,9 @@
   <string name="share_privilege_can_edit_delete">حذف</string>
   <string name="edit_share_unshare">توقّف هم‌رسانی</string>
   <string name="edit_share_done">انجام شد</string>
-    <string name="manage_space_title">مدیریت فضا</string>
+  <string name="action_upload_retry">تلاش مجدد</string>
+  <string name="action_upload_clear">معلوم</string>
+  <string name="manage_space_title">مدیریت فضا</string>
   <string name="manage_space_clear_data">پاک‌سازی داده</string>
   <string name="manage_space_error">برخی پرونده‌ها نمي‌توانند حذف شوند.</string>
   <string name="auth_forbidden">دسترسی غیر مجاز</string>
@@ -395,4 +423,5 @@
     <item quantity="other">‫%d گزیده</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_4_title">آپلودهای دوربین</string>
 </resources>
