--- a/owncloudApp/src/main/res/values-th-rTH/strings.xml
+++ b/owncloudApp/src/main/res/values-th-rTH/strings.xml
@@ -551,4 +551,5 @@
   <string name="get_base_url_error">ไม่สามารถทราบ URL ของเซิร์ฟเวอร์</string>
   <string name="prefs_http_logs">บันทึกคำขอและการตอบกลับ HTTP</string>
   <string name="prefs_logs_summary">บันทึกอาจมีข้อมูลที่ละเอียดอ่อน การแบ่งปันบันทึกกับผู้อื่นถือเป็นความรับผิดชอบของผู้ใช้แต่เพียงผู้เดียว</string>
+  <string name="synchronizing_account">ประสานข้อมูลบัญชี</string>
 </resources>
