--- a/owncloudApp/src/main/res/values-es/strings.xml
+++ b/owncloudApp/src/main/res/values-es/strings.xml
@@ -400,6 +400,7 @@
   <string name="drawer_manage_accounts">Gestionar cuentas</string>
   <string name="auth_redirect_non_secure_connection_title">La conexión segura está siendo redirigida por una ruta insegura.</string>
   <string name="actionbar_logger">Logs</string>
+  <string name="log_open_logs_view">Abrir vista de registros</string>
   <string name="log_send_history_button">Mandar historial.</string>
   <string name="log_send_no_mail_app">Aplicación para enviar registros no encontrada. Por favor instale una aplicación de correo.</string>
   <string name="log_send_mail_subject">Se han encontrado %1$s logs de la app Android</string>
@@ -550,4 +551,7 @@
   <string name="common_not_found">No se encontró</string>
   <string name="supports_oauth2_error">No fue posible determinar si OAuth2 está soportado</string>
   <string name="get_base_url_error">No fue posible conocer la URL base del servidor</string>
+  <string name="prefs_http_logs">Registrar peticiones y respuestas HTTP</string>
+  <string name="prefs_logs_summary">Los registros pueden contener información sensible. Compartirlos o no es responsabilidad del usuario.</string>
+  <string name="synchronizing_account">Sincronizando cuenta</string>
 </resources>
